Корректировки согласно тз. Добавления возможности редактирования созданных ссылок

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,4 @@ logging.level.ru.shorter=DEBUG
 short.default-clicks=10
 short.base-url=http://localhost:8080/
 short.url-length=6
-short.expiration-date=600000
+short.expiration-date-min=10
